--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,6 +4,12 @@
 name: Java CI with Maven
 
 on:
+#  push:
+#    branches:
+#      - main
+#  pull_request:
+  workflow_dispatch:
+on:
   push:
     branches: [ master ]
   pull_request:
